[gd_scene load_steps=60 format=3 uid="uid://b1ox71ir72lm"]

[ext_resource type="Script" uid="uid://cwb7ioa8h08n2" path="res://puzzles.gd" id="1_aahxs"]
[ext_resource type="PackedScene" uid="uid://btb8twisisaqb" path="res://sliding_puzzle_1_main.tscn" id="1_fa1cb"]
[ext_resource type="PackedScene" uid="uid://dwv55a4bxepbv" path="res://sliding_puzzle_2_main.tscn" id="2_aahxs"]
[ext_resource type="PackedScene" uid="uid://c17r2wxq80epd" path="res://sliding_puzzle_3_main.tscn" id="3_e03ss"]
[ext_resource type="Texture2D" uid="uid://co0lbw5jx00eh" path="res://images/Puzzles.png" id="5_e03ss"]
[ext_resource type="Script" uid="uid://c0mj3ls2rxkqd" path="res://sliding_puzzle_1_main.gd" id="6_xpj73"]
[ext_resource type="Texture2D" uid="uid://bdakm2sw8qo1f" path="res://images/puzzle4slides_01.jpg" id="7_13sb1"]
[ext_resource type="Texture2D" uid="uid://cvp681txq06jh" path="res://images/puzzle4slides_02.jpg" id="8_h5w47"]
[ext_resource type="Texture2D" uid="uid://cek03v44d65jk" path="res://images/puzzle4slides_03.jpg" id="9_sw0y5"]
[ext_resource type="Texture2D" uid="uid://dwl8dj8fxnhj4" path="res://images/puzzle4slides_04.jpg" id="10_whjw6"]
[ext_resource type="Texture2D" uid="uid://dvf1hv6uhcpey" path="res://images/puzzle4slides_05.jpg" id="11_vyd1f"]
[ext_resource type="Texture2D" uid="uid://ca8igwa5sikda" path="res://images/puzzle4slides_06.jpg" id="12_ws7vx"]
[ext_resource type="Texture2D" uid="uid://cgxg81ima16m7" path="res://images/puzzle4slides_07.jpg" id="13_5ofcl"]
[ext_resource type="Texture2D" uid="uid://cbds4n8ywf3mg" path="res://images/puzzle4slides_08.jpg" id="14_1e3h0"]
[ext_resource type="Texture2D" uid="uid://cnqaob4g6qfob" path="res://images/puzzle4slides_09.jpg" id="15_uuppv"]
[ext_resource type="Texture2D" uid="uid://vqs25xwqf5pf" path="res://images/puzzle4slides_10.jpg" id="16_rymp0"]
[ext_resource type="Texture2D" uid="uid://ds0trv0ctqir3" path="res://images/puzzle4slides_11.jpg" id="17_pv2ce"]
[ext_resource type="Texture2D" uid="uid://bt04yhs5bxqqf" path="res://images/puzzle4slides_12.jpg" id="18_w02sc"]
[ext_resource type="Texture2D" uid="uid://qe5ti53lambj" path="res://images/puzzle4slides_13.jpg" id="19_b1rwu"]
[ext_resource type="Texture2D" uid="uid://5tn52fro8ody" path="res://images/puzzle4slides_14.jpg" id="20_djxx8"]
[ext_resource type="Texture2D" uid="uid://dy6sb3puq7sfw" path="res://images/puzzle4slides_15.jpg" id="21_ik8ky"]
[ext_resource type="Texture2D" uid="uid://cfk4yd38nopr5" path="res://images/Puzzle4Gray.jpg" id="22_556vm"]
[ext_resource type="Texture2D" uid="uid://cgmwvuxwhh3ux" path="res://images/Puzzle5Slices_01.jpg" id="23_556vm"]
[ext_resource type="Texture2D" uid="uid://bdxs7hmgd53yj" path="res://images/puzzle4.jpg" id="23_p805h"]
[ext_resource type="Texture2D" uid="uid://cdylgdh0ehcts" path="res://images/Puzzle5Slices_02.jpg" id="24_tvsnl"]
[ext_resource type="Texture2D" uid="uid://dhfok0ejko7i0" path="res://images/Puzzle5Slices_03.jpg" id="25_i5kw6"]
[ext_resource type="Texture2D" uid="uid://dfu437bhgeh6k" path="res://images/Puzzle5Slices_04.jpg" id="26_ud2kk"]
[ext_resource type="Texture2D" uid="uid://dgy7773soqfy" path="res://images/Puzzle5Slices_05.jpg" id="27_puei3"]
[ext_resource type="Texture2D" uid="uid://dy2ba3a2oq14x" path="res://images/Puzzle5Slices_06.jpg" id="28_paqam"]
[ext_resource type="Texture2D" uid="uid://dfc11anm8fiu3" path="res://images/Puzzle5Slices_07.jpg" id="29_blpaa"]
[ext_resource type="Texture2D" uid="uid://bbujt7c5hqu0s" path="res://images/Puzzle5Slices_08.jpg" id="30_1libm"]
[ext_resource type="Texture2D" uid="uid://bq7ewe8km2h7" path="res://images/Puzzle5Slices_09.jpg" id="31_eenw4"]
[ext_resource type="Texture2D" uid="uid://b6eto6mwggss7" path="res://images/Puzzle5Slices_10.jpg" id="32_ul1m0"]
[ext_resource type="Texture2D" uid="uid://ijrcmpv5tou2" path="res://images/Puzzle5Slices_11.jpg" id="33_c7p5w"]
[ext_resource type="Texture2D" uid="uid://binf01q6g8dt3" path="res://images/Puzzle5Slices_12.jpg" id="34_18lh1"]
[ext_resource type="Texture2D" uid="uid://ctxy060fb23oj" path="res://images/Puzzle5Slices_13.jpg" id="35_chwl7"]
[ext_resource type="Texture2D" uid="uid://crjme3k07evyy" path="res://images/Puzzle5Slices_14.jpg" id="36_s7e02"]
[ext_resource type="Texture2D" uid="uid://clai6okkafvcb" path="res://images/Puzzle5Slices_15.jpg" id="37_34dm5"]
[ext_resource type="Texture2D" uid="uid://b6rtnlsqyclb0" path="res://images/Puzzle5Gray.jpg" id="38_b1gj3"]
[ext_resource type="Texture2D" uid="uid://dwxxqwb7kgj2x" path="res://images/Puzzle6Slices_01.jpg" id="39_gfwau"]
[ext_resource type="Texture2D" uid="uid://c6wod2smqq8r0" path="res://images/Puzzle5.jpg" id="40_btcjt"]
[ext_resource type="Texture2D" uid="uid://crbw5ef0ekmv0" path="res://images/Puzzle6Slices_02.jpg" id="40_p805h"]
[ext_resource type="Texture2D" uid="uid://dgoumk22h61wq" path="res://images/Puzzle6Slices_03.jpg" id="41_btcjt"]
[ext_resource type="Texture2D" uid="uid://dbggdg4m5772k" path="res://images/Puzzle6Slices_04.jpg" id="42_4oi5f"]
[ext_resource type="Texture2D" uid="uid://je83bou3mtdr" path="res://images/Puzzle6Slices_05.jpg" id="43_fxctk"]
[ext_resource type="Texture2D" uid="uid://cejiuq4rf57uy" path="res://images/Puzzle6Slices_06.jpg" id="44_ea1d6"]
[ext_resource type="Texture2D" uid="uid://biymc8qam16w4" path="res://images/Puzzle6Slices_07.jpg" id="45_sbcdw"]
[ext_resource type="Texture2D" uid="uid://bcaylhi510arf" path="res://images/Puzzle6Slices_08.jpg" id="46_yj87h"]
[ext_resource type="Texture2D" uid="uid://cvo25jakirq0h" path="res://images/Puzzle6Slices_09.jpg" id="47_phs5n"]
[ext_resource type="Texture2D" uid="uid://cubmnam0bljty" path="res://images/Puzzle6Slices_10.jpg" id="48_7bd0k"]
[ext_resource type="Texture2D" uid="uid://dcv6f8w5d3sex" path="res://images/Puzzle6Slices_11.jpg" id="49_s6jam"]
[ext_resource type="Texture2D" uid="uid://bom2i0ltxh4qh" path="res://images/Puzzle6Slices_12.jpg" id="50_ftlg0"]
[ext_resource type="Texture2D" uid="uid://bmq24engf0bu5" path="res://images/Puzzle6Slices_13.jpg" id="51_8f6nf"]
[ext_resource type="Texture2D" uid="uid://ciqrikyqsufeh" path="res://images/Puzzle6Slices_14.jpg" id="52_3bpai"]
[ext_resource type="Texture2D" uid="uid://bawtkv86b4nra" path="res://images/Puzzle6Slices_15.jpg" id="53_bbw73"]
[ext_resource type="Texture2D" uid="uid://bwjk1p3x8knet" path="res://images/Puzzle6Gray.jpg" id="54_2541q"]
[ext_resource type="Texture2D" uid="uid://d32wxscbq8456" path="res://images/Puzzle6.jpg" id="57_4oi5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e03ss"]
bg_color = Color(0.138445, 0.19376, 0.215339, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8tjs"]
size = Vector2(984, 984)

[node name="Puzzles" type="CanvasLayer"]
script = ExtResource("1_aahxs")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -775.0
offset_top = -465.0
offset_right = 775.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_e03ss")
stretch_mode = 4

[node name="SlidingPuzzle1Main" parent="." instance=ExtResource("1_fa1cb")]
position = Vector2(960, 540)

[node name="SlidingPuzzle2Main" parent="." instance=ExtResource("2_aahxs")]
visible = false
position = Vector2(960, 540)
scale = Vector2(0.7, 0.7)

[node name="SlidingPuzzle3Main" parent="." instance=ExtResource("3_e03ss")]
visible = false
position = Vector2(960, 540)
scale = Vector2(0.7, 0.7)

[node name="Exit" type="Button" parent="."]
visible = false
offset_left = 318.0
offset_top = 493.0
offset_right = 594.0
offset_bottom = 593.0
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_e03ss")
theme_override_styles/normal = SubResource("StyleBoxFlat_e03ss")
text = "Exit (resets)"

[node name="GiveUp" type="Button" parent="."]
visible = false
offset_left = 318.0
offset_top = 493.0
offset_right = 594.0
offset_bottom = 593.0
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_e03ss")
theme_override_styles/normal = SubResource("StyleBoxFlat_e03ss")
text = "Give Up"

[node name="Slide4" type="Area2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.7, 0.7)
script = ExtResource("6_xpj73")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slide4"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_x8tjs")

[node name="Tile1" type="Sprite2D" parent="Slide4"]
position = Vector2(-369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("7_13sb1")

[node name="Tile2" type="Sprite2D" parent="Slide4"]
position = Vector2(-123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("8_h5w47")

[node name="Tile3" type="Sprite2D" parent="Slide4"]
position = Vector2(123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("9_sw0y5")

[node name="Tile4" type="Sprite2D" parent="Slide4"]
position = Vector2(369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("10_whjw6")

[node name="Tile5" type="Sprite2D" parent="Slide4"]
position = Vector2(-369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("11_vyd1f")

[node name="Tile6" type="Sprite2D" parent="Slide4"]
position = Vector2(-123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("12_ws7vx")

[node name="Tile7" type="Sprite2D" parent="Slide4"]
position = Vector2(123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("13_5ofcl")

[node name="Tile8" type="Sprite2D" parent="Slide4"]
position = Vector2(369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("14_1e3h0")

[node name="Tile9" type="Sprite2D" parent="Slide4"]
position = Vector2(-369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("15_uuppv")

[node name="Tile10" type="Sprite2D" parent="Slide4"]
position = Vector2(-123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("16_rymp0")

[node name="Tile11" type="Sprite2D" parent="Slide4"]
position = Vector2(123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("17_pv2ce")

[node name="Tile12" type="Sprite2D" parent="Slide4"]
position = Vector2(369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("18_w02sc")

[node name="Tile13" type="Sprite2D" parent="Slide4"]
position = Vector2(-369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("19_b1rwu")

[node name="Tile14" type="Sprite2D" parent="Slide4"]
position = Vector2(-123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("20_djxx8")

[node name="Tile15" type="Sprite2D" parent="Slide4"]
position = Vector2(123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("21_ik8ky")

[node name="Tile16" type="Sprite2D" parent="Slide4"]
position = Vector2(369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("22_556vm")

[node name="Completed" type="TextureRect" parent="Slide4"]
offset_left = 542.857
offset_top = -482.857
offset_right = 2942.86
offset_bottom = 1917.14
scale = Vector2(0.17, 0.17)
texture = ExtResource("23_p805h")

[node name="RichTextLabel" type="RichTextLabel" parent="Slide4"]
offset_left = 539.0
offset_top = -76.0
offset_right = 949.0
offset_bottom = 496.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Completed puzzle

[b]How to solve:[/b]
Click any tile adjacent to the grey tile to swap it with the grey one. Complete the image by swapping tiles.
[b]The grey tile will always end in the bottom right.[/b]"

[node name="Slide5" type="Area2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.7, 0.7)
script = ExtResource("6_xpj73")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slide5"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_x8tjs")

[node name="Tile1" type="Sprite2D" parent="Slide5"]
position = Vector2(-369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("23_556vm")

[node name="Tile2" type="Sprite2D" parent="Slide5"]
position = Vector2(-123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("24_tvsnl")

[node name="Tile3" type="Sprite2D" parent="Slide5"]
position = Vector2(123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("25_i5kw6")

[node name="Tile4" type="Sprite2D" parent="Slide5"]
position = Vector2(369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("26_ud2kk")

[node name="Tile5" type="Sprite2D" parent="Slide5"]
position = Vector2(-369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("27_puei3")

[node name="Tile6" type="Sprite2D" parent="Slide5"]
position = Vector2(-123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("28_paqam")

[node name="Tile7" type="Sprite2D" parent="Slide5"]
position = Vector2(123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("29_blpaa")

[node name="Tile8" type="Sprite2D" parent="Slide5"]
position = Vector2(369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("30_1libm")

[node name="Tile9" type="Sprite2D" parent="Slide5"]
position = Vector2(-369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("31_eenw4")

[node name="Tile10" type="Sprite2D" parent="Slide5"]
position = Vector2(-123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("32_ul1m0")

[node name="Tile11" type="Sprite2D" parent="Slide5"]
position = Vector2(123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("33_c7p5w")

[node name="Tile12" type="Sprite2D" parent="Slide5"]
position = Vector2(369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("34_18lh1")

[node name="Tile13" type="Sprite2D" parent="Slide5"]
position = Vector2(-369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("35_chwl7")

[node name="Tile14" type="Sprite2D" parent="Slide5"]
position = Vector2(-123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("36_s7e02")

[node name="Tile15" type="Sprite2D" parent="Slide5"]
position = Vector2(123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("37_34dm5")

[node name="Tile16" type="Sprite2D" parent="Slide5"]
position = Vector2(369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("38_b1gj3")

[node name="Completed" type="TextureRect" parent="Slide5"]
offset_left = 542.857
offset_top = -482.857
offset_right = 2942.86
offset_bottom = 1917.14
scale = Vector2(0.17, 0.17)
texture = ExtResource("40_btcjt")

[node name="RichTextLabel" type="RichTextLabel" parent="Slide5"]
offset_left = 539.0
offset_top = -76.0
offset_right = 949.0
offset_bottom = 496.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Completed puzzle

[b]How to solve:[/b]
Click any tile adjacent to the grey tile to swap it with the grey one. Complete the image by swapping tiles.
[b]The grey tile will always end in the bottom right.[/b]"

[node name="Slide6" type="Area2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.7, 0.7)
script = ExtResource("6_xpj73")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slide6"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_x8tjs")

[node name="Tile1" type="Sprite2D" parent="Slide6"]
position = Vector2(-369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("39_gfwau")

[node name="Tile2" type="Sprite2D" parent="Slide6"]
position = Vector2(-123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("40_p805h")

[node name="Tile3" type="Sprite2D" parent="Slide6"]
position = Vector2(123, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("41_btcjt")

[node name="Tile4" type="Sprite2D" parent="Slide6"]
position = Vector2(369, -360)
scale = Vector2(0.41, 0.41)
texture = ExtResource("42_4oi5f")

[node name="Tile5" type="Sprite2D" parent="Slide6"]
position = Vector2(-369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("43_fxctk")

[node name="Tile6" type="Sprite2D" parent="Slide6"]
position = Vector2(-123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("44_ea1d6")

[node name="Tile7" type="Sprite2D" parent="Slide6"]
position = Vector2(123, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("45_sbcdw")

[node name="Tile8" type="Sprite2D" parent="Slide6"]
position = Vector2(369, -114)
scale = Vector2(0.41, 0.41)
texture = ExtResource("46_yj87h")

[node name="Tile9" type="Sprite2D" parent="Slide6"]
position = Vector2(-369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("47_phs5n")

[node name="Tile10" type="Sprite2D" parent="Slide6"]
position = Vector2(-123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("48_7bd0k")

[node name="Tile11" type="Sprite2D" parent="Slide6"]
position = Vector2(123, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("49_s6jam")

[node name="Tile12" type="Sprite2D" parent="Slide6"]
position = Vector2(369, 132)
scale = Vector2(0.41, 0.41)
texture = ExtResource("50_ftlg0")

[node name="Tile13" type="Sprite2D" parent="Slide6"]
position = Vector2(-369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("51_8f6nf")

[node name="Tile14" type="Sprite2D" parent="Slide6"]
position = Vector2(-123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("52_3bpai")

[node name="Tile15" type="Sprite2D" parent="Slide6"]
position = Vector2(123, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("53_bbw73")

[node name="Tile16" type="Sprite2D" parent="Slide6"]
position = Vector2(369, 378)
scale = Vector2(0.41, 0.41)
texture = ExtResource("54_2541q")

[node name="Completed" type="TextureRect" parent="Slide6"]
offset_left = 542.857
offset_top = -482.857
offset_right = 2942.86
offset_bottom = 1917.14
scale = Vector2(0.17, 0.17)
texture = ExtResource("57_4oi5f")

[node name="RichTextLabel" type="RichTextLabel" parent="Slide6"]
offset_left = 539.0
offset_top = -76.0
offset_right = 949.0
offset_bottom = 496.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Completed puzzle

[b]How to solve:[/b]
Click any tile adjacent to the grey tile to swap it with the grey one. Complete the image by swapping tiles.
[b]The grey tile will always end in the bottom right.[/b]"

[connection signal="completed" from="SlidingPuzzle1Main" to="." method="on_completed"]
[connection signal="completed" from="SlidingPuzzle2Main" to="." method="on_completed"]
[connection signal="completed" from="SlidingPuzzle3Main" to="." method="on_completed"]
[connection signal="button_up" from="Exit" to="." method="reset_puzzle"]
[connection signal="button_up" from="GiveUp" to="." method="give_up"]
[connection signal="completed" from="Slide4" to="." method="on_completed"]
[connection signal="completed" from="Slide5" to="." method="on_completed"]
[connection signal="completed" from="Slide6" to="." method="on_completed"]
